# ffforf

./: Cargo.toml  README.md  test.fasta  test.fasta.fai  test.orf  test.orf.fai
benches/: revcomp.rs
src/: helpful.rs  lib.rs
